added responsive navbar and button on home page

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -4,17 +4,12 @@
 
 .defaultBg {
   min-height: calc(100vh - 56px);
+}
+.cntr {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-position: center;
-  background-size: cover;
 }
 .page-bg {
   min-height: 40vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-position: center;
-  background-size: cover;
 }
